- fix modal open z-index

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-modal.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-modal.less
@@ -5,6 +5,14 @@ body.modal-open {
 }
 
 .modal {
+   z-index: 2050 !important;
+
+}
+.modal-backdrop {
+   z-index: 2040 !important;
+}
+
+.modal {
 	.modal-header {
 		&__virtual-tour {
 			padding: 0px ! important;
