--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/included/c-modaldetail.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/included/c-modaldetail.less
@@ -13,13 +13,13 @@
 	}
 }
 
-@media (min-width:768px){
+@media (min-width:769px){
 	.modal-detail-link-hideDesktop {
 		display:none;
 	}
 }
 
-@media (max-width:767px){
+@media (max-width:768px){
 	.modal-detail-link-hideMobile {
 		display:none;
 	}
